# world-in-world

./: .gitignore  LICENSE  LICENSE.txt  README.md  requirements.txt
FTsvd/: README.md  __init__.py  dataset.py  eval_inference.py  train_svd.py  train_svd.sh  train_svd.txt
FTsvd/config/: accelerate_deepspeed_o1_8gpu_config.yaml  accelerate_deepspeed_o1_config.yaml  accelerate_deepspeed_o2_config.yaml
FTsvd/diffusers-private/: pyproject.toml
FTsvd/diffusers-private/diffusers/: .gitignore  configuration_utils.py
FTsvd/diffusers-private/diffusers/models/: attention.py  embeddings.py
FTsvd/diffusers-private/diffusers/models/transformers/: transformer_temporal.py
FTsvd/diffusers-private/diffusers/models/unets/: unet_3d_blocks.py  unet_spatio_temporal_condition.py
FTsvd/diffusers-private/diffusers/pipelines/stable_video_diffusion/: pipeline_stable_video_diffusion.py
collect_bbox/: coordinate_transformation.py  draw_bbox.py
data_filtering/: filter_util.py  pcd_reproject.py
docs/: 00_README.md  01_setup_env.md  02_evaluation_datasets.md  03_run_commands.md  04_post_training.md  05_add_new_WM.md  09_WM_server_details.md
downstream/: simulator.py  solver_AEQA.py  solver_AR.py  solver_IGNav.py  solver_base.py  visualize.py  vlm.py
downstream/api_models/: __init__.py  cosmos25_model.py  cosmos_model.py  hunyuan_model.py  ltx_model.py  (+8 more)
habitat_data/: HabitatRender.py  config_utils.py  habitat_util.py  recoder.py
scripts/: data_collect.sh
utils/: logger.py  parser_additions.py  pt_to_safetensors_cosmos.py  svd_utils.py  util.py
wiw_manip/: main.py
(+373 files in other folders)
